--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Kris makes stuff
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Programming blog and portfolio by Kristian Dixon. 
+  Programming blog and portfolio by Kristian Dixon. ALSOOOO COOL STUFF :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kris_1206
