--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,10 @@ twitter_username: kris_1206
 
 
 # Build settings
-theme: Architect
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
