--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,8 @@ twitter_username: kris_1206
 
 
 # Build settings
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: minima
 plugins:
-  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
