--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,12 @@ twitter_username: kris_1206
 
 
 # Build settings
-remote_theme: minima
+theme: minima
 plugins:
   - jekyll-feed
 
+minima:
+  skin: dark
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
