Actually pushed some things :)

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Kris makes stuff
 description: >- # this means to ignore newlines until "baseurl:"
   Programming blog and portfolio by Kristian Dixon 🐯
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kristian-dixon.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 author:
   name: Kris
